force-app/main/default/objects/Goals__c/Goals__c.object-meta.xml
<CustomObject>
    <label>Goals</label>
    <nameField>
        <label>Goals</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>