force-app/main/default/objects/Goals__c/fields/ActualValue__c.field-meta.xml
<CustomField>
    <fullName>ActualValue__c</fullName>
    <label>ActualValue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>