force-app/main/default/objects/Goals__c/fields/CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>CompletionDate__c</fullName>
    <label>CompletionDate</label>
    <type>Date</type>
</CustomField>