force-app/main/default/objects/Goals__c/fields/Control_of_your_finances__c.field-meta.xml
<CustomField>
    <fullName>Control_of_your_finances__c</fullName>
    <label>Control of your finances</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>