force-app/main/default/objects/Goals__c/fields/Description_Do_you_have_an_adequate_plan__c.field-meta.xml
<CustomField>
    <fullName>Description_Do_you_have_an_adequate_plan__c</fullName>
    <label>Description Do you have an adequate plan</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>