force-app/main/default/objects/Goals__c/fields/Description_exp_in_the_next_6_12_month__c.field-meta.xml
<CustomField>
    <fullName>Description_exp_in_the_next_6_12_month__c</fullName>
    <label>Description exp in the next 6 12 month</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>