force-app/main/default/objects/Goals__c/fields/Description_struggle_to_meet_houshold__c.field-meta.xml
<CustomField>
    <fullName>Description_struggle_to_meet_houshold__c</fullName>
    <label>Description struggle to meet houshold</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>