force-app/main/default/objects/Goals__c/fields/Description_Would_you_describe_yourself__c.field-meta.xml
<CustomField>
    <fullName>Description_Would_you_describe_yourself__c</fullName>
    <label>Description Would you describe yourself</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>