force-app/main/default/objects/Goals__c/fields/Do_you_have_an_adequate_plan__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_an_adequate_plan__c</fullName>
    <label>Do you have an adequate plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>