force-app/main/default/objects/Goals__c/fields/Do_you_struggle_to_meet_your_household__c.field-meta.xml
<CustomField>
    <fullName>Do_you_struggle_to_meet_your_household__c</fullName>
    <label>Do you struggle to meet your household</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>