force-app/main/default/objects/Goals__c/fields/Find_ways_to_save_money__c.field-meta.xml
<CustomField>
    <fullName>Find_ways_to_save_money__c</fullName>
    <label>Find ways to save money</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>