force-app/main/default/objects/Goals__c/fields/Finish_this_sentance_i_get_annoyed__c.field-meta.xml
<CustomField>
    <fullName>Finish_this_sentance_i_get_annoyed__c</fullName>
    <label>Finish this sentance i get annoyed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>