force-app/main/default/objects/Goals__c/fields/household_expense_in_the_next_6_12_month__c.field-meta.xml
<CustomField>
    <fullName>household_expense_in_the_next_6_12_month__c</fullName>
    <label>household expense in the next 6 12 month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>