force-app/main/default/objects/Goals__c/fields/InitialValue__c.field-meta.xml
<CustomField>
    <fullName>InitialValue__c</fullName>
    <label>InitialValue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>