force-app/main/default/objects/Goals__c/fields/Is_Not_Applicable_For_financial_priority__c.field-meta.xml
<CustomField>
    <fullName>Is_Not_Applicable_For_financial_priority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Not Applicable For financial priority</label>
    <type>Checkbox</type>
</CustomField>