force-app/main/default/objects/Goals__c/fields/Is_Not_Applicable_For_Life_Event__c.field-meta.xml
<CustomField>
    <fullName>Is_Not_Applicable_For_Life_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Not Applicable For Life Event</label>
    <type>Checkbox</type>
</CustomField>