force-app/main/default/objects/Goals__c/fields/Plan_to_achieve_your_financial_goals__c.field-meta.xml
<CustomField>
    <fullName>Plan_to_achieve_your_financial_goals__c</fullName>
    <label>Plan to achieve your financial goals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>