force-app/main/default/objects/Goals__c/fields/Plan_to_repay_debt_quickly__c.field-meta.xml
<CustomField>
    <fullName>Plan_to_repay_debt_quickly__c</fullName>
    <label>Plan to repay debt quickly</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>