force-app/main/default/objects/Goals__c/fields/preferred_repayment_frequency__c.field-meta.xml
<CustomField>
    <fullName>preferred_repayment_frequency__c</fullName>
    <label>preferred repayment frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>