force-app/main/default/objects/Goals__c/fields/PrimaryOwner__c.field-meta.xml
<CustomField>
    <fullName>PrimaryOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PrimaryOwner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Goals</relationshipLabel>
    <relationshipName>Goals</relationshipName>
    <type>Lookup</type>
</CustomField>