force-app/main/default/objects/Goals__c/fields/Rates_of_interest_you_currently_pay__c.field-meta.xml
<CustomField>
    <fullName>Rates_of_interest_you_currently_pay__c</fullName>
    <label>Rates of interest you currently pay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>