force-app/main/default/objects/Goals__c/fields/Take_action_to_save_money__c.field-meta.xml
<CustomField>
    <fullName>Take_action_to_save_money__c</fullName>
    <label>Take action to save money</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>