force-app/main/default/objects/Goals__c/fields/TargetDate__c.field-meta.xml
<CustomField>
    <fullName>TargetDate__c</fullName>
    <label>TargetDate</label>
    <type>Date</type>
</CustomField>