force-app/main/default/objects/Goals__c/fields/TargetValue__c.field-meta.xml
<CustomField>
    <fullName>TargetValue__c</fullName>
    <label>TargetValue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>