force-app/main/default/objects/Goals__c/fields/Track_and_manage_your_finances__c.field-meta.xml
<CustomField>
    <fullName>Track_and_manage_your_finances__c</fullName>
    <label>Track and manage your finances</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>