force-app/main/default/objects/Goals__c/fields/What_is_your_stage_in_life__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_stage_in_life__c</fullName>
    <label>What is your stage in life</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>