force-app/main/default/objects/Goals__c/fields/Which_financial_priorities_relevant_you__c.field-meta.xml
<CustomField>
    <fullName>Which_financial_priorities_relevant_you__c</fullName>
    <label>Which financial priorities relevant you</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Save for a house</fullName>
            </value>
            <value>
                <fullName>Manage my finances</fullName>
            </value>
            <value>
                <fullName>Repay mortgage early</fullName>
            </value>
            <value>
                <fullName>Lower household expenditure</fullName>
            </value>
            <value>
                <fullName>Lower cost of interest</fullName>
            </value>
            <value>
                <fullName>Save for an event or purchase</fullName>
            </value>
            <value>
                <fullName>Be debt free sooner</fullName>
            </value>
            <value>
                <fullName>Track and improve cash flow</fullName>
            </value>
            <value>
                <fullName>Consolidate debt</fullName>
            </value>
            <value>
                <fullName>Build wealth through investment</fullName>
            </value>
            <value>
                <fullName>Lower loan repayments</fullName>
            </value>
            <value>
                <fullName>Pay mortage off</fullName>
            </value>
            <value>
                <fullName>Reduce cost of interest</fullName>
            </value>
            <value>
                <fullName>Reduce loan Repayments</fullName>
            </value>
            <value>
                <fullName>Lower Hosehold expenses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>