force-app/main/default/objects/Goals__c/fields/Which_life_events_are_relevant_to_you__c.field-meta.xml
<CustomField>
    <fullName>Which_life_events_are_relevant_to_you__c</fullName>
    <label>Which life events are relevant to you</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>