force-app/main/default/objects/Goals__c/fields/Why_did_you_chose_Parker_Lane__c.field-meta.xml
<CustomField>
    <fullName>Why_did_you_chose_Parker_Lane__c</fullName>
    <label>Why did you chose Parker Lane</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product / rate</fullName>
            </value>
            <value>
                <fullName>Recommended</fullName>
            </value>
            <value>
                <fullName>Easiest process</fullName>
            </value>
            <value>
                <fullName>Customer service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>