force-app/main/default/objects/Goals__c/fields/Would_you_describe_yourself__c.field-meta.xml
<CustomField>
    <fullName>Would_you_describe_yourself__c</fullName>
    <label>Would you describe yourself</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>