force-app/main/default/objects/Goals__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ActualValue__c</columns>
    <columns>CompletionDate__c</columns>
    <columns>Description__c</columns>
    <columns>InitialValue__c</columns>
    <columns>SourceSystemId__c</columns>
    <columns>Status__c</columns>
    <columns>TargetDate__c</columns>
    <columns>TargetValue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>